# Housing-NY-Airbnb

./: README.md  pyproject.toml
data/: Out_10.csv
model/: mejor_modelo.pkl
model/mlruns/0/: meta.yaml
model/mlruns/644145966148805200/: meta.yaml
model/mlruns/644145966148805200/8becaacd7e7d4b759948ea32fd244f22/: meta.yaml
model/mlruns/644145966148805200/8becaacd7e7d4b759948ea32fd244f22/artifacts/Modelo/: MLmodel  conda.yaml  python_env.yaml
model/mlruns/644145966148805200/8becaacd7e7d4b759948ea32fd244f22/metrics/: mae  r2  rmse
model/mlruns/644145966148805200/8becaacd7e7d4b759948ea32fd244f22/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
notebook/: demo.ipynb
py/: DivisorDeDatos.py  ExploradorDeDatos.py  IngenieroDeCaracteristicas.py  IngestorDeDatos.py  LimpiadorDeDatos.py  ModeloDePrediccion.py  app.py  main.py
