[tool.poetry]
name = "nyairbnb"
version = "0.1.0"
description = ""
authors = ["adrianinfantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
matplotlip = "^0.2"
seaborn = "^0.13.2"
scikit-learn = "^1.4.0"
polars = "^0.20.5"
jupyter = "^1.0.0"
jupyterlab = "^4.0.11"
mlflow = "^2.9.2"
folium = "^0.15.1"
streamlit = "^1.30.0"
streamlit-folium = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
